<resources>
    <string name="app_name">Carga Express</string>
    <string name="usuario">Cedula</string>
    <string name="contra">Contraseña</string>
    <string name="btn_iniSesion">Iniciar Sesión</string>
    <string name="btn_registro">Crear Cuenta</string>
    <string name="cuentanosSobreTi">Cuentanos sobre ti</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="email">Correo Electronico</string>
    <string-array name="identificacion">
        <item>C.C</item>
        <item>C.E</item>
    </string-array>
    <string name="radioComerciante">Comerciante</string>
    <string name="radioConductor">Conductor</string>
    <string name="radioPropietario">Propietario de camion</string>
    <string name="soy">Soy:</string>
    <string name="title_activity_carga_express">carga_express</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="miCuenta">Mi cuenta</string>
    <string name="cuenta_nombre">Nombre(s)</string>
    <string name="cuenta_apellido">Apellido(s)</string>
    <string name="cuenta_tipo">Tipo Documento</string>
    <string name="cuenta_cedula">Numero de documento</string>
    <string name="cuenta_email">Correo Electronico</string>
    <string name="cuenta_rol">Rol</string>
    <string name="menu_cuenta">Mi cuenta</string>
    <string name="menu_inicio">Inicio</string>
    <string name="infoTuNuevoCamion">Información sobre tu nuevo camión</string>
    <string name="nTarjetaPropiedad">N° tarjeta de propiedad</string>
    <string name="placa">Placa</string>
    <string name="modelo">Modelo</string>
    <string name="capacidad">Capacidad</string>
    <string name="kg">Kg</string>
    <string name="conductorCamión">Conductor del camión</string>
    <string-array name="quienConduce">
        <item>Yo soy el conductor</item>
        <item>Persona diferente</item>
    </string-array>
    <string name="cedulaConductor">Cedula conductor</string>
    <string name="btn_registrarCamion">Registrar camión</string>
    <string name="mis_camiones">Mis Camiones</string>
    <string name="agregar_camion">Agregar camion</string>
    <string name="solicitudTransporte">Solicitud de transporte de carga</string>
    <string name="tipoCarga_label">Tipo de carga:</string>
    <string-array name="tiposCarga">
        <item>Mercancia sólida</item>
        <item>Productos agricolas</item>
    </string-array>
    <string name="dimensiones">Dimensiones</string>
    <string name="peso">Peso</string>
    <string name="alto">Alto</string>
    <string name="ancho">Ancho</string>
    <string name="profundidad">Profundidad</string>
    <string name="m">m</string>
    <string name="direccionOrigen">Dirección de origen</string>
    <string name="direccionDestino">Dirección de destino</string>
    <string name="ciudad">Ciudad</string>
    <string name="fechaRecogida">Fecha de recogida</string>
    <string name="hora">Hora</string>
    <string name="fechaEntrega">Fecha de entrega</string>
    <string name="especificacionesAdicionales">Especificaciones adicionales</string>
    <string name="aclaracionesAlTransportador">Aclaraciones adicionales para el transportador</string>
    <string name="btn_publicarSolicitud">Publicar solicitud</string>
    <string name="mis_publicaciones">Mis Cargas</string>
    <string name="agregar_carga">Agregar carga</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="agregar_conductor">¿Desea agregar este conductor?</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="correo">Correo</string>
    <string name="conductor">Conductor asignado</string>
    <string name="ciudad_origen">Origen</string>
    <string name="ciudad_destino">Destino</string>
    <string name="aplicar">¿Desea aplicar a esta carga?</string>
    <string name="btn_postularme">Postularme a carga</string>
    <string name="ver_postulaciones">Ver postulaciones</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="fechaHoraRecogida">Fecha y hora de recogida</string>
    <string name="busqueda">Introduza una palabra clave</string>
    <string name="detalle_carga">Detalle Carga</string>
    <string name="iniciar_viaje">Iniciar Viaje</string>
    <string name="iniciar_viaje_confirmacion">¿Está seguro de iniciar este viaje?</string>
    <string name="finalizar_viaje">Finalizar viaje</string>
    <string name="ver_incidencia">Ver incidencia</string>
    <string name="titulo_incidencia">Titulo Incidencia</string>
    <string name="descripcion_incidencia">Ingrese la descripcion de la incidencia</string>
    <string name="continuar_viaje">Continuar viaje</string>
    <string name="fotos_incidencia">Adjunte evidencia y fotos de la carga</string>
    <string name="publicar_incidencia">Publicar Incidencia</string>
    <string name="asignar_conductor">Asignar Conductor</string>
    <string name="confirmacion_asignacion_conductor">¿Está seguro de asignar?</string>
    <string-array name="tipos_incidencia">
        <item>Asalto en ruta</item>
        <item>Colision</item>
        <item>Condiciones de ruta complicadas</item>
        <item>Incendio</item>
        <item>Averias en el vehiculo</item>
        <item>Via cerrada</item>
        <item>Robo de carga</item>
        <item>Atasco en la via</item>
        <item>Otro</item>
    </string-array>
    <string name="idChannel">channelId</string>
    <string name="ir_a_configuracion">IR A CONFIGURACIÓN</string>
    <string name="continuar">CONTINUAR</string>
    <string name="descripcion_permiso">Si desea recibir notificaciones, habilite este permiso en la configuración de la aplicación. \\n\\nAl continuar acepta que no recibirás ninguna notificación ni estará informado de lo que suceda dentro de la aplicación</string>
    <string name="title_activity_carga_ubication">CargaUbication</string>
    <string name="text_genero">Genero</string>
    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>No binario</item>
    </string-array>
    <string name="confirmarContraseña">Confirmar contraseña</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="realizarRecorridoAlterno">Realizar recorrido alterno</string>
    <string name="detalle_camion">Detalle Camion</string>
    <string name="dashboard">Mis estadisticas</string>
    <string name="numero_viajes">N° viajes</string>
    <string name="medidas">Variable</string>
    <string name="valor">Valor</string>
    <string name="unidades">(unidad)"</string>
    <string name="tiempo_viaje">Tiempo de viaje</string>
    <string name="horas">(horas)</string>
    <string name="numero_toneladas">Toneladas transportadas</string>
    <string name="distancia_recorrida">Distancia recorrida</string>
    <string name="combustible">Combustible consumido</string>
    <string name="kilometros">(kilometros)</string>
    <string name="galones">(galones)</string>
    <string name="toneladas">(toneladas)</string>
    <string-array name="meses">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>


    </string-array>
</resources>