<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ingreso">

    <fragment
        android:id="@+id/nav_ingreso"
        android:name="co.edu.unipiloto.cargaexpress.ui.login.IngresoFragment"
        android:label="@string/btn_iniSesion"
        tools:layout="@layout/fragment_ingreso"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="co.edu.unipiloto.cargaexpress.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_acount"
        android:name="co.edu.unipiloto.cargaexpress.ui.acount.AcountFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_acount" />
    <fragment
        android:id="@+id/nav_dashboard"
        android:name="co.edu.unipiloto.cargaexpress.ui.dashboard.Dashboard"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

</navigation>