<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.Dashboard">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="21dp"
                app:layout_constraintBottom_toTopOf="@+id/spinner3"
                app:layout_constraintTop_toBottomOf="@+id/categoria"
                tools:layout_editor_absoluteX="10dp" />

            <TableLayout
                android:id="@+id/estadisticas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner3">

                <TableRow
                    android:background="@color/blue_color"
                    android:paddingVertical="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/medidas"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/valor"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/numero_viajes"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numero_viajes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/unidades"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tiempo_viaje"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tiempo_viaje"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/horas"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/numero_toneladas"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numero_toneladas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/toneladas"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/distancia_recorrida"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/distancia_recorrida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kilometros"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:paddingVertical="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/combustible"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/combustible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/galones"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>

            <Spinner
                android:id="@+id/placa_elec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toTopOf="@+id/categoria"
                app:layout_constraintEnd_toStartOf="@+id/anio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/anio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toTopOf="@+id/categoria"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/placa_elec"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/barChart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anio" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:entries="@array/meses"
                app:layout_constraintBottom_toTopOf="@+id/estadisticas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barChart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>